src/objects/InvoiceItem__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>IT-{00000000}</displayFormat>
        <label>Invoice Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidateInvoiceNull</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Invoice__c )</errorConditionFormula>
        <errorMessage>Invoice is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateInvoiceStatus</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Invoice__r.Status__c ,&apos;Open&apos;) || ISPICKVAL(Invoice__r.Status__c ,&apos;New&apos;))</errorConditionFormula>
        <errorMessage>An invoice can only be modified in status &quot;Open&quot; or &quot;New&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateInvoiceUpdate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISCHANGED( Invoice__c ),
 NOT(ISBLANK(PRIORVALUE(Invoice__c))),
 PRIORVALUE(Invoice__c)!=Invoice__c
)</errorConditionFormula>
        <errorMessage>Can not update the Invoice field.</errorMessage>
    </validationRules>
</CustomObject>